--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "17.4.0"
+  },
   "dependencies": {
     "body-parser": "^1.19.2",
     "ejs": "^3.1.6",
